fix overflow issues '

--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -283,6 +283,9 @@
     .spes-banner-res {
         object-position: 80% 0% !important;
     }
+    .spes-banner-res {
+        object-position: 80% 0% !important;
+    }
 }
 @media(max-width:767px){    
     .ps-banner-swiper-main-wrapper {
